UI:editing css in files

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body {
+ font-family: 'iran';
+ 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@font-face {
+  font-family:'iran' ;
+  src: local('iran'), url(./assets/font/iran.ttf) format('truetype');
+}
+@font-face {
+  font-family:'title' ;
+  src: url(./assets/font/SOGAND.ttf);
 }
